# EPI

./: .gitignore  CMakeLists.txt  Makefile  epi.cpp  ll_cycle.cpp  max_stack.cpp
exercises/: epi8_linkedlist.cpp
include/: binary_tree.h  linkedlist.h  list.h  max_stack.h
src/: linkedlist.cpp
